# instaloader-api

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: copilot-instructions.md
app/: __init__.py  config.py  exceptions.py  main.py  models.py
app/routes/: download.py
app/services/: insta_service.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
app/utils/: zip_utils.py
