[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insta-save"
version = "1.0.0"
description = "Instagram content downloader API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "instaloader>=4.10.3",
    "python-multipart>=0.0.6",
    "aiofiles>=25.1.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.25.0",
]

[project.scripts]
insta-save = "app.main:start"

[tool.hatch.build.targets.wheel]
packages = ["app"]
